tests/expected_output/uninitialized-char-array-fsanitize=valgrind/000000-clang-14.0-x86_64-pc-linux-gnu.txt

Runtime error: uninitialized variable accessed.

Execution stopped in main() in uninitialized-char-array.c at line 7:

int main(int argc, char **argv) {
    char input[2][10];
--> printf("%s", input[0]);
}

Values when execution stopped:

argc = 1
input = {"<10 uninitialized values>", "<10 uninitialized values>"}
input[0] = "<10 uninitialized values>"

